# open-agent-search

./: .dockerignore  .env.example  .gitignore  .prettierignore  404.html  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  index.html  locustfile.py  main.py  mcp_server.py  mkdocs.yml  pyproject.toml  requirements.txt  run_tests.ps1  sitemap.xml  test_content_routes.py  vercel.json
.github/instructions/: copilot.instructions.md
.github/workflows/: ci.yml  docs.yml
api/endpoints/: index.html
api/mcp-tools/: index.html
contributing/: index.html
controllers/: book_controller.py  content_controller.py  image_controller.py  news_controller.py  text_controller.py  unified_controller.py  video_controller.py
ddgs_server/: __main__.py  app.py  mcp.py
ddgs_server/controllers/: book.py  content.py  text.py  unified.py  video.py
ddgs_server/models/: schemas.py
ddgs_server/routes/: book.py
deployment/docker/: index.html
deployment/vercel/: index.html
docs/: contributing.md  index.md
docs/api/: endpoints.md  mcp-tools.md
docs/deployment/: docker.md  vercel.md
docs/getting-started/: installation.md  quickstart.md
docs/mcp/: claude-code.md  claude-desktop.md  cursor.md  index.md  openclaw.md  other-clients.md  vscode.md  windsurf.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
mcp/: index.html
mcp/claude-code/: index.html
mcp/claude-desktop/: index.html
mcp/cursor/: index.html
mcp/openclaw/: index.html
mcp/other-clients/: index.html
models/: schemas.py
open_agent_search/: __init__.py  __main__.py  app.py  config.py  mcp.py
routes/: book_routes.py  content_routes.py  image_routes.py  news_routes.py  text_routes.py  unified_routes.py  video_routes.py
scripts/: check_docs.ps1  run_load_tests.ps1
search/: search_index.json
tests/: conftest.py  locustfile.py  test_api.py  test_content_routes.py
utils/: __init__.py  async_helpers.py  url_validator.py
(+14 files in other folders)
